feat: go to today

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="date-picker-container" id="datePicker">
         <div class="date-picker-header">
             <div class="flex date-picker-header-command">
-               <span>برو به امروز</span>
+               <span id="goToday">برو به امروز</span>
                <div class="flex">
                     <i class="icon icon-calendar"></i>
                     <span id="changeLocale">تاریخ میلادی</span>
