feat: config for custom date

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <tbody id="datePickerBody">
             </tbody>
         </table>
+        <div class="date-picker-footer">
+            <button class="btn" id="confirmDate">تایید</button>
+        </div>
     </div>
 
     <script src="/assets/js/jalali-moment.js"></script>
