feat: show selected date

--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
             </tbody>
         </table>
         <div class="date-picker-footer">
-            <button class="btn" id="confirmDate">تایید</button>
+            <span class="selectedDate">تاریخ انتخاب شده : 
+                <span id="selectedDate"></span>
+            </span>
+            <button class="btn disabled" id="confirmDate">تایید</button>
         </div>
     </div>
+    <div class="date-picker-back"></div>
 
     <script src="/assets/js/jalali-moment.js"></script>
     <script src="/assets/js/script.js"></script>
